tests/specs/ecosystem/lightbery/virtual_file_tree/1_0_0.test
lightbery/virtual-file-tree/1.0.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2580 [ERROR]: Cannot find name 'Buffer'.
  public writeFile(virtualPath: string, data: Buffer, options?: {
                                              ~~~~~~
    at file://<tmpdir>/Virtual-File-Tree.ts:10:47

error: Type checking failed.

